# fuels-test

./: Cargo.toml  Forc.toml  README.md
src/: main.rs
tests/: fuels.rs
